<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.douban</groupId>
	<artifactId>douban-book</artifactId>
	<version>1.0</version>
	<packaging>apk</packaging>
	<name>Douban Books</name>
	<properties>
		<scala.version>2.10</scala.version>
		<scala.release>2.10.1</scala.release>
	</properties>

    <repositories>
        <repository>
            <id>scala-tools.org</id>
            <name>Scala-tools Maven2 Repository</name>
            <url>http://www.scala-tools.org/repo-releases</url>
        </repository>
    </repositories>
	<dependencies>
		<dependency>
			<groupId>org.scaloid</groupId>
			<artifactId>scaloid</artifactId>
			<version>1.1_8_2.10</version>
		</dependency>
        <dependency>
            <groupId>com.douban</groupId>
            <artifactId>scala-api_2.10</artifactId>
            <version>2.1</version>
        </dependency>
        <dependency>
            <groupId>com.google.zxing</groupId>
            <artifactId>core</artifactId>
            <version>2.1</version>
        </dependency>
        <dependency>
            <groupId>com.google.android</groupId>
            <artifactId>support-v4</artifactId>
            <version>r7</version>
        </dependency>
    </dependencies>

	<pluginRepositories>
		<pluginRepository>
			<id>scala-tools.org</id>
			<name>Scala-tools Maven2 Repository</name>
			<url>http://www.scala-tools.org/repo-releases</url>
		</pluginRepository>
	</pluginRepositories>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jarsigner-plugin</artifactId>
						<version>1.2</version>
						<executions>
							<execution>
								<id>signing</id>
								<goals>
									<goal>sign</goal>
								</goals>
								<phase>package</phase>
								<inherited>true</inherited>
								<configuration>
									<archiveDirectory>target</archiveDirectory>
									<includes>
										<include>target/*.apk</include>
									</includes>
									<keystore>scala-test.keystore</keystore>
									<storepass>scalatest</storepass>
									<keypass>scalatest</keypass>
									<alias>androidscalatest</alias>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>com.jayway.maven.plugins.android.generation2</groupId>
						<artifactId>android-maven-plugin</artifactId>
						<version>3.5.0</version>
						<inherited>true</inherited>
						<configuration>
							<sign>
								<debug>false</debug>
							</sign>
						</configuration>
						<executions>
							<execution>
								<id>alignApk</id>
								<phase>install</phase>
								<goals>
									<goal>zipalign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
				<artifactId>android-maven-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<androidManifestFile>${project.basedir}/AndroidManifest.xml</androidManifestFile>
					<assetsDirectory>${project.basedir}/assets</assetsDirectory>
					<resourceDirectory>${project.basedir}/res</resourceDirectory>
					<nativeLibrariesDirectory>${project.basedir}/src/main/native</nativeLibrariesDirectory>
					<sdk>
						<platform>14</platform>
					</sdk>
					<deleteConflictingFiles>true</deleteConflictingFiles>
					<undeployBeforeDeploy>true</undeployBeforeDeploy>
					<dex>
						<jvmArguments>
							<jvmArgument>-Xmx1024M</jvmArgument>
							<jvmArgument>-XX:MaxPermSize=512M</jvmArgument>
						</jvmArguments>
					</dex>
					<proguard>
						<skip>false</skip>
						<config>project/proguard.cfg</config>
						<jvmArguments>
							<jvmArgument>-Xmx1024M</jvmArgument>
						</jvmArguments>
					</proguard>
				</configuration>
				<extensions>true</extensions>
			</plugin>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.scala-tools</groupId>
				<artifactId>maven-scala-plugin</artifactId>
				<version>2.15.2</version>
				<configuration>
					<scalaVersion>${scala.version}</scalaVersion>
				</configuration>
				<executions>
					<execution>
						<id>scala-compile-first</id>
						<phase>process-resources</phase>
						<goals>
							<goal>add-source</goal>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>1.7</version>
				<executions>
					<execution>
						<id>add-source</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>add-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>src/main/scala</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.scala-tools</groupId>
				<artifactId>maven-scala-plugin</artifactId>
				<version>2.15.2</version>
				<configuration>
					<scalaVersion>${scala.version}</scalaVersion>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
</project>
